AAE-45917 API Endpoint for BPMN activities - fix dto
